unpackaged/objects/GlobalBypassProcessesSettings__c.object
<CustomObject>
  <customSettingsType>Hierarchy</customSettingsType>
  <description>Global Bypass Control Panel</description>
  <fields>
    <fullName>RunFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CURRENTLY NOT IN USE</inlineHelpText>
    <label>Run All Record-Triggered Flows</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>RunProcessBuilder__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Compatible Objects: Account, AccountMergeRequest, CallReport, CAmpaignMember, Campaign, Case, ontact, Contract, EmailMessage, Event, Expert, KOLInfo, LoyaltyProgramParticipant, OpporutnityTrigger, OrderItem, Order, ProgramParticipation, Lead</inlineHelpText>
    <label>Run All Process Builders</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>RunTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Compatible Objects: Account, AccountMergeRequest, CallReport, CAmpaignMember, Campaign, Case, ontact, Contract, EmailMessage, Event, Expert, KOLInfo, LoyaltyProgramParticipant, OpporutnityTrigger, OrderItem, Order, ProgramParticipation, Lead</inlineHelpText>
    <label>Run All Triggers</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>RunValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Compatible Objects: Contact, FMV</inlineHelpText>
    <label>Run All Validation Rules</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>TriggerObjectsBypass__c</fullName>
    <inlineHelpText>Comma Separated Object Name</inlineHelpText>
    <label>Trigger Objects Bypass - comma separated</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>Global Bypass Processes Settings</label>
  <listViews>
    <fullName>All</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>RunProcessBuilder__c</columns>
    <columns>RunFlows__c</columns>
    <columns>RunTriggers__c</columns>
    <columns>RunValidationRules__c</columns>
    <columns>TriggerObjectsBypass__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
</CustomObject>